--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<frameset framespacing="0" bordercolor="lightgrey" rows="10%,*" >
+  <frame src="pr1.html" frameborder="0.5">
+  <frame src="pr2.html" frameborder="0.5" >
+  
+</frameset>
+
+
+</html>
